fix: spacing

--- a/source/sass/component/_fab.scss
+++ b/source/sass/component/_fab.scss
@@ -9,15 +9,22 @@ $_: "c-fab";
 @include tokens.create($_, getComponentTokens($_));
 
 //Values for the loop
-$xAxis: (left, right);
-$yAxis: (top, bottom);
+$xAxis: (
+    left,
+    right
+);
+$yAxis: (
+    top,
+    bottom
+);
 
 //Standard styling
 .#{$_} {
+    contain: layout;
     position: fixed;
     z-index: 6000;
-    bottom: tokens.use($_, "base", 2);
-    right: tokens.use($_, "base", 2);
+    bottom: tokens.use($_, "space", 2);
+    right: tokens.use($_, "space", 2);
     text-align: right;
     z-index: 8000;
 }
@@ -25,13 +32,15 @@ $yAxis: (top, bottom);
 .#{$_} .#{$_}__panel {
     @extend .c-card !optional;
     border-radius: tokens.get($_, "border-radius");
+    corner-shape: tokens.get($_, "corner-shape");
+    filter: tokens.use($_, "shadow", 3);
+    background: tokens.get($_, "color--surface");
     display: none;
-    margin-bottom: tokens.use($_, "base", 2);
-    min-width: 200px;
-    max-width: 250px;
+    margin-bottom: tokens.use($_, "space", 2);
+    min-width: tokens.use($_, "space", 18);
+    max-width: tokens.use($_, "space", 25);
     text-align: left;
-    background: tokens.get($_, "color--background");
-    padding: tokens.use($_, "base", 2);
+    padding: tokens.use($_, "space", 2);
 }
 
 .#{$_} .#{$_}__panel--open {
@@ -41,8 +50,8 @@ $yAxis: (top, bottom);
 
 .#{$_}__panel .#{$_}__heading {
     text-align: center;
-    margin-bottom: tokens.use($_, "base", 2);
-    padding: tokens.use($_, "base", 2);
+    margin-bottom: tokens.use($_, "space", 2);
+    padding: tokens.use($_, "space", 2);
     padding-top: 0;
     margin-top: 0;
 }
@@ -57,8 +66,8 @@ $yAxis: (top, bottom);
 @each $sideX in $xAxis {
     @each $sideY in $yAxis {
         .#{$_}__#{$sideY}-#{$sideX} {
-            #{$sideX}: tokens.use($_, "base", 2);
-            #{$sideY}: tokens.use($_, "base", 2);
+            #{$sideX}: tokens.use($_, "space", 2);
+            #{$sideY}: tokens.use($_, "space", 2);
         }
     }
 }
